--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aimers OS | Ultimate</title>
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" href="/aimerslogo.ico">
+    <link rel="shortcut icon" href="/aimerslogo.ico">
+    <link rel="apple-touch-icon" href="/aimerslogo.png">
+    <meta name="theme-color" content="#000000">
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/sw.js');
+            });
+        }
+    </script>
 </head>
 
 <body>
